Passing functions via Props

--- a/21Props/props/src/Components/Items.module.css
+++ b/21Props/props/src/Components/Items.module.css
@@ -1,7 +1,11 @@
-.dsk-item{
-   background-color: rgb(51, 145, 213);
+.dsk-item {
+  background-color: rgb(51, 145, 213);
+  height: 50px;
 }
-.dsk-span{
-font-weight: 500;
-color:rgb(18, 17, 17);
+.dsk-span {
+  font-weight: 400;
+  color: rgb(18, 17, 17);
+}
+.button {
+  float: right;
 }
